--- a/views/home.hbs
+++ b/views/home.hbs
@@ -86,10 +86,7 @@
                             <p>{{this.description}}.</p>
                         </div>
                         <div class="card-action">
-                            <a
-                                href={{this.link}}
-                                class="btn blue"
-                            >Explore</a>
+                            <a href={{this.link}} class="btn blue">Explore</a>
                         </div>
                     </div>
                 </div>
