--- a/views/projects/lambdaCalculus.hbs
+++ b/views/projects/lambdaCalculus.hbs
@@ -117,7 +117,7 @@ link: "/projects/lambdaCalculus"
                                     as: (((λx.λy.x) (A B)) C) which aren't that
                                     usefull yet, but luckily there also exist
                                     some ways to reduce a given lambda
-                                    expression:'.
+                                    expression:
                                 </p>
 
                                 <div class="row">
@@ -255,16 +255,339 @@ link: "/projects/lambdaCalculus"
                                 <!-- Code -->
                                 <div class="row">
                                     <div class="col l10 offset-l1 s12 m12">
-                                        <pre>
-                                            <code
+                                        <pre><code
                                                 id="code-python1"
                                                 class="code python"
                                             >
-                                            </code>
-
-                                        </pre>
+                                            </code></pre>
                                     </div>
                                 </div>
+
+                                <p class="section">
+                                    Attention: The following code snippets are
+                                    condensed to the bare minimum. You can find
+                                    the full code on my
+                                    <a
+                                        href="https://github.com/ManuelLerchner/Random-Coding-Projects/tree/master/Python/LambdaCalculus"
+                                    >Github-Page</a>.
+
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--The Lexer -->
+        <div class="row">
+            <div class="col l10 offset-l1 s12 m12">
+
+                <div class="card blue-grey darken-3">
+                    <div class="row">
+                        <div class="col l10 offset-l1 s12 m12">
+
+                            <div
+                                class="card-content grey-text text-lighten-4 projectText"
+                            >
+                                <h5
+                                    class="orange-text text-darken-2 projectTitle"
+                                >The Lexer
+                                </h5>
+
+                                <p class="section">
+                                    A Lexer or sometimes called Tokenizer is a
+                                    small programm which takes a sequence of
+                                    characters (the "source code" of our
+                                    λ-Expressions) and turs them into a sequence
+                                    of predefinded Tokens.<br />
+                                    In addition to analizing and splitting the
+                                    input-string the lexer also has some
+                                    utility-functions which we can later use to
+                                    parse the expression.
+                                </p>
+
+                                <!-- Lexer Code -->
+                                <div class="row">
+                                    <div class="col l10 offset-l1 s12 m12">
+                                        <pre><code
+                                                id="code-python2"
+                                                class="code python"
+                                            >
+                                            </code></pre>
+                                    </div>
+
+                                </div>
+                                <p class="section">
+                                    We also define a Token-class in which we
+                                    store the type and the possible value of our
+                                    encountered symbols.
+                                </p>
+
+                                <!-- Token Code -->
+                                <div class="row">
+                                    <div class="col l10 offset-l1 s12 m12">
+                                        <pre><code
+                                                id="code-python3"
+                                                class="code python"
+                                            >
+                                            </code></pre>
+                                    </div>
+                                </div>
+
+                                <p class="section">
+                                    This allows us to tokenize our first string:
+                                </p>
+
+                                <!-- Lexer Test Code -->
+                                <div class="row">
+                                    <div class="col l10 offset-l1 s12 m12">
+                                        <pre><code
+                                                id="code-python4"
+                                                class="code python"
+                                            >
+                                            </code></pre>
+                                    </div>
+                                </div>
+
+                                <p class="section">
+                                    As result we get a list of all the tokens in
+                                    the input string.
+                                    <br />This concludes the Lexer and we can
+                                    now begin parsing the expression.
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--The Parser -->
+        <div class="row">
+            <div class="col l10 offset-l1 s12 m12">
+
+                <div class="card blue-grey darken-3">
+                    <div class="row">
+                        <div class="col l10 offset-l1 s12 m12">
+
+                            <div
+                                class="card-content grey-text text-lighten-4 projectText"
+                            >
+                                <h5
+                                    class="orange-text text-darken-2 projectTitle"
+                                >The Parser
+                                </h5>
+
+                                <p class="section">
+                                    A Parser performs an analysis of the given
+                                    tokens and creates an abstract syntax tree
+                                    (AST). During parsing it closely follows the
+                                    rules specified by the given "formal
+                                    grammar"
+                                </p>
+
+                                <p class="section">
+                                    Bevore we can start to parse our tokens, we
+                                    first must specify the grammar the parser is
+                                    going to follow:
+                                </p>
+
+                                <!-- Grammar -->
+                                <div class="row">
+                                    <div class="col l10 offset-l1 s12 m12">
+                                        <pre><code
+                                                id="code-python5"
+                                                class="code python"
+                                            >
+                                            </code></pre>
+                                    </div>
+
+                                </div>
+                                <p class="section">
+                                    In the following section some of the valid
+                                    strings this grammar allows are shown:
+                                </p>
+
+                                <!-- Gramamr Example -->
+                                <div class="row">
+                                    <div class="col l10 offset-l1 s12 m12">
+                                        <pre><code
+                                                id="code-python6"
+                                                class="code python"
+                                            >
+                                            </code></pre>
+                                    </div>
+                                </div>
+
+                                <p class="section">
+                                    Now we can write our Parser, which impements
+                                    the grammar rules specified above:
+                                </p>
+
+                                <!-- Parser Code -->
+                                <div class="row">
+                                    <div class="col l10 offset-l1 s12 m12">
+                                        <pre><code
+                                                id="code-python7"
+                                                class="code python"
+                                            >
+                                            </code></pre>
+                                    </div>
+                                </div>
+
+                                <p class="section">
+                                    We also need to define our Node-classes
+                                    which hold information about the underlying
+                                    structure of groups of tokens.<br />
+                                    The goal is to create an abstract syntax
+                                    tree (AST) which contains all structural
+                                    informations of the given tokens.<br />The
+                                    Node classes already contain some helper
+                                    functions which we later need to interpret
+                                    the AST.
+                                </p>
+
+                                <!-- Node Code -->
+                                <div class="row">
+                                    <div class="col l10 offset-l1 s12 m12">
+                                        <pre><code
+                                                id="code-python8"
+                                                class="code python"
+                                            >
+                                            </code></pre>
+                                    </div>
+                                </div>
+
+                                <p class="section">
+                                    Now we can parse the tokens we previously
+                                    aquired from the Lexer and create the
+                                    abstract-syntax-tree:
+                                </p>
+
+                                <!-- Node Code -->
+                                <div class="row">
+                                    <div class="col l10 offset-l1 s12 m12">
+                                        <pre><code
+                                                id="code-python9"
+                                                class="code python"
+                                            >
+                                            </code></pre>
+                                    </div>
+                                </div>
+
+                                <p class="section">
+                                    The AST is a Node that has references to
+                                    other nodes inside which also refer to their
+                                    children nodes and so forth.<br />
+                                    In this example the AST is an Application
+                                    Node which contains another Application Node
+                                    and a Variable Node. The internal
+                                    Application Node contains itself a Function
+                                    Node that also contains another Function
+                                    Node inside.<br />
+                                    In the following image you can see a drawing
+                                    of the AST with all its sub-nodes.
+                                </p>
+
+                                <img
+                                    class="center inlineImg"
+                                    src="/projects/lambdaAST.png"
+                                />
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--The Interpreter -->
+        <div class="row">
+            <div class="col l10 offset-l1 s12 m12">
+
+                <div class="card blue-grey darken-3">
+                    <div class="row">
+                        <div class="col l10 offset-l1 s12 m12">
+
+                            <div
+                                class="card-content grey-text text-lighten-4 projectText"
+                            >
+                                <h5
+                                    class="orange-text text-darken-2 projectTitle"
+                                >The Interpreter
+                                </h5>
+
+                                <p class="section">
+                                    The Interpreter takes the AST we evaluated
+                                    bevore and tries to interpet it. In this
+                                    case, due to the nature of lambda-calculus
+                                    the interpreter just simplifies the given
+                                    AST as far as possible.
+                                </p>
+
+                                <!-- Interpreter -->
+                                <div class="row">
+                                    <div class="col l10 offset-l1 s12 m12">
+                                        <pre><code
+                                                id="code-python10"
+                                                class="code python"
+                                            >
+                                            </code></pre>
+                                    </div>
+
+                                </div>
+
+                                <p class="section">
+                                    Now we can put everything together:
+                                </p>
+
+                                <!-- Final Expl -->
+                                <div class="row">
+                                    <div class="col l10 offset-l1 s12 m12">
+                                        <pre><code
+                                                id="code-python11"
+                                                class="code python"
+                                            >
+                                            </code></pre>
+                                    </div>
+
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Advanced Applications -->
+        <div class="row">
+            <div class="col l10 offset-l1 s12 m12">
+
+                <div class="card blue-grey darken-3">
+                    <div class="row">
+                        <div class="col l10 offset-l1 s12 m12">
+
+                            <div
+                                class="card-content grey-text text-lighten-4 projectText"
+                            >
+                                <h5
+                                    class="orange-text text-darken-2 projectTitle"
+                                >Advanced Applications
+                                </h5>
+
+                                <p class="section">
+                                    Now that we have completed our basic
+                                    tokenize-parse-interpret system, we can use
+                                    it to calculate some advanced expressions
+                                    and and represent features such as boolean
+                                    logic, arithmetic expressions and
+                                    datastructures such as lists.
+                                </p>
+
                             </div>
                         </div>
                     </div>
