--- a/views/layouts/error.hbs
+++ b/views/layouts/error.hbs
@@ -31,6 +31,8 @@
             href="/css/style.css"
         />
 
+        <link rel="icon" type="image/png" href="/images/logo.png"/>
+
         <!-- Init Sidenav Animaion--->
         <script>
             document.addEventListener('DOMContentLoaded', function() {
