--- a/views/about.hbs
+++ b/views/about.hbs
@@ -69,7 +69,7 @@
                             </p>
                             <p>
                                 If you have any questions, comments, or just
-                                want to chat about robots, feel free to get in
+                                want to chat, feel free to get in
                                 <a href="/contact">contact </a>
                                 with me.</p>
                         </div>
