added Pathfinder project

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -61,10 +61,10 @@
                                 that will improve people’s lives and help
                                 further our understanding of the universe.</p>
                             <p class="section">
-                                This year i graduated from the TFO-Bruneck with
+                                This year I graduated from the TFO-Bruneck with
                                 a specialization on electronics and automation
                                 engineering in Bruneck, Italy.<br />
-                                Next year i intend to start studying computer
+                                Next year I intend to start studying computer
                                 science in Munich, Germany.
                             </p>
                             <p>
