--- a/views/controller.hbs
+++ b/views/controller.hbs
@@ -19,7 +19,7 @@
                         Controller</h1>
 
                     <h5 class="subtext center white-text text-lighten-2">Here
-                        you can interact with some reallife things i built</h5>
+                        you can interact with some reallife things I built</h5>
 
                 </div>
             </div>
