--- a/views/home.hbs
+++ b/views/home.hbs
@@ -39,7 +39,7 @@
                         Projects</h1>
 
                     <h5 class="subtext center white-text text-lighten-2">Take a
-                        look at some of the projects i worked on</h5>
+                        look at some of the projects I worked on</h5>
 
                 </div>
             </div>
