--- a/views/layouts/error.hbs
+++ b/views/layouts/error.hbs
@@ -7,7 +7,7 @@
         <meta name="title" content="Manuel Lerchner" />
         <meta
             name="description"
-            content="This is my personal website and a place for me to share some of the projects i am working on."
+            content="This is my personal website and a place for me to share some of the projects I am working on."
         />
         <meta
             name="keywords"
