--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -4,7 +4,7 @@
             <div class="col s4 l4">
                 <h5 class="orange-text descriptionText">About</h5>
                 <p class="grey-text text-lighten-4">This is my personal website
-                    and a place for me to share some of the projects i am
+                    and a place for me to share some of the projects I am
                     working on.<br />
                     Feel free to contact me with any questions, comments, or
                     concerns. I will get back to you as soon as I can!
