--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -38,6 +38,7 @@
             document.addEventListener('DOMContentLoaded', function() {
                 M.Sidenav.init(document.querySelectorAll('.sidenav'));
                 M.Parallax.init(document.querySelectorAll('.parallax'));
+                M.Dropdown.init(document.querySelectorAll('.dropdown-trigger'));
         });
         </script>
 
