added 2 new search algorithms

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -31,8 +31,8 @@
             href="/css/style.css"
         />
 
-        <link rel="icon" type="image/png" href="/images/logo.png"/>
-
+        <link rel="icon" href="/images/logo.png"/>
+        
         <!-- Init Sidenav Animaion--->
         <script>
             document.addEventListener('DOMContentLoaded', function() {
