--- a/views/layouts/error.hbs
+++ b/views/layouts/error.hbs
@@ -17,6 +17,17 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="language" content="English" />
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-JZ8R2FF9B4"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || []; function
+            gtag(){dataLayer.push(arguments);} gtag('js', new Date());
+            gtag('config', 'G-JZ8R2FF9B4');
+        </script>
+
         <!-- Materialize --->
         <link
             rel="stylesheet"
