--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -28,6 +28,12 @@
             gtag('config', 'G-JZ8R2FF9B4');
         </script>
 
+        <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9955097758294177"
+            crossorigin="anonymous"
+        ></script>
+
         <!-- Materialize --->
         <link
             rel="stylesheet"
