fix card layout

--- a/views/projects/pathfinder.hbs
+++ b/views/projects/pathfinder.hbs
@@ -1,6 +1,6 @@
 <!-- Preview Data
 title: "PathFinder",
-description: "In this project I implemented the AStar, Dijksta, Depth-First and Breadth-First pathfinding-algorithm in a React-App. Additionally I created a basic UI to interact with the game world.",
+description: "In this project I implemented the AStar, Dijksta, Depth-First and Breadth-First pathfinding-algorithms in a react-app. Additionally I created a basic UI to interact with the game world",
 image: "/images/pathFinderThumbnail.jpg",
 link: "/projects/pathfinder"
 -->
