--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -21,7 +21,7 @@
 
             </div>
 
-            <ul class="right hide-on-med-and-down navbarText">
+            <ul class="right hide-on-med-and-down navbarText marginRight">
 
                 <li id="nav-home"><a class="" href="/"><i
                             class="material-icons left md-36"
@@ -35,7 +35,7 @@
                             class="material-icons left md-36"
                         >mail_outline</i>Contact</a></li>
 
-                <li id="nav-about "><a href="/about" class="marginRight"><i
+                <li id="nav-about"><a href="/about"><i
                             class="material-icons left md-36"
                         >info_outline</i>About</a></li>
 
