--- a/views/projects/lambdaCalculus.hbs
+++ b/views/projects/lambdaCalculus.hbs
@@ -134,8 +134,10 @@ link: "/projects/lambdaCalculus"
                                 </p>
                                 <div class="row">
                                     <div class="col l10 offset-l1 s12 m12">
-                                        <table class="highlight">
-                                            <thead>
+                                        <table
+                                            class="highlight grey darken-3 white-text"
+                                        >
+                                            <thead class="highlight">
                                                 <tr>
                                                     <th colspan="1">Syntax</th>
                                                     <th>Name</th>
@@ -175,7 +177,9 @@ link: "/projects/lambdaCalculus"
 
                                 <div class="row">
                                     <div class="col l10 offset-l1 s12 m12">
-                                        <table class="highlight">
+                                        <table
+                                            class="highlight grey darken-3 white-text"
+                                        >
                                             <thead>
                                                 <tr>
                                                     <th colspan="1">Syntax</th>
@@ -249,7 +253,9 @@ link: "/projects/lambdaCalculus"
 
                                     <div class="col l10 offset-l1 s12 m12">
 
-                                        <table class="highlight">
+                                        <table
+                                            class="highlight grey darken-3 white-text"
+                                        >
                                             <thead>
                                                 <tr>
                                                     <th
@@ -655,7 +661,9 @@ link: "/projects/lambdaCalculus"
 
                                 <div class="row">
                                     <div class="col l10 offset-l1 s12">
-                                        <table>
+                                        <table
+                                            class="highlight grey darken-3 white-text"
+                                        >
                                             <thead>
                                                 <tr>
                                                     <th>Name</th>
@@ -691,7 +699,9 @@ link: "/projects/lambdaCalculus"
 
                                 <div class="row">
                                     <div class="col l10 offset-l1 s12">
-                                        <table>
+                                        <table
+                                            class="highlight grey darken-3 white-text"
+                                        >
                                             <thead>
                                                 <tr>
                                                     <th>Name</th>
@@ -794,7 +804,9 @@ link: "/projects/lambdaCalculus"
 
                                 <div class="row">
                                     <div class="col l10 offset-l1 s12">
-                                        <table>
+                                        <table
+                                            class="highlight grey darken-3 white-text"
+                                        >
                                             <thead>
                                                 <tr>
                                                     <th>Name</th>
@@ -849,7 +861,9 @@ link: "/projects/lambdaCalculus"
 
                                 <div class="row">
                                     <div class="col l10 offset-l1 s12">
-                                        <table>
+                                        <table
+                                            class="highlight grey darken-3 white-text"
+                                        >
                                             <thead>
                                                 <tr>
                                                     <th>Name</th>
@@ -925,7 +939,9 @@ link: "/projects/lambdaCalculus"
 
                                 <div class="row">
                                     <div class="col l10 offset-l1 s12">
-                                        <table>
+                                        <table
+                                            class="highlight grey darken-3 white-text"
+                                        >
                                             <thead>
                                                 <tr>
                                                     <th>Name</th>
