--- a/views/projects/lambdaCalculus.hbs
+++ b/views/projects/lambdaCalculus.hbs
@@ -2,7 +2,8 @@
 title: "Lambda Calculus",
 description: "In this project I built a parser and interpreter for the λ-calculus in Python. In the end I was able to create some smaller programms in my self-developed programming language",
 image: "/images/lambdaCalculusThumbnail.jpg",
-link: "/projects/lambdaCalculus"
+link: "/projects/lambdaCalculus",
+idx: "1"
 -->
 
 <html lang="en">
