--- a/views/projects/monopoly.hbs
+++ b/views/projects/monopoly.hbs
@@ -1,6 +1,7 @@
 <!-- Preview Data
-title: "Monopoly",
-description: "In this project I built an automatic banking system for a custom made 'Monopoly-Cities' I`ve built with my friends. The website represents the programming part of the project, while my colleagues planned and created the physical game",
+title: "Monopoly-Bank",
+description: "I built an website for a custom made 'Monopoly-Cities' I`ve built with my friends. The website represents the programming part of the project, while my colleagues planned and created the physical game",
 image: "/images/Monopoly.jpg",
-link: "http://manuellerchner.ddns.net:3010/"
+link: "http://manuellerchner.ddns.net:3010/",
+idx: "3"
 -->
