--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -48,7 +48,7 @@
             href="/css/style.css"
         />
 
-        <link rel="icon" href="/images/logo.png"/>
+        <link rel="icon" type="image/png" href="/images/logo2.png"/>
         
         <!-- Init Sidenav Animaion--->
         <script>
