--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -6,19 +6,22 @@
 
             <div class="left marginLeft">
 
-                <a id="logo-container" href="/" class="brand-logo rainbow">
+                <div class="logo-container">
 
-                    <div class="Logo">
-                        <img src="/images/logo.png" />
+                    <a href="/" class="brand-logo rainbow">
 
-                    </div>
+                        <div class="Logo">
+                            <img class="logoImage" src="/images/logo2.png" />
 
-                </a>
-                <a
-                    class="LogoText hide-on-med-and-down rainbow"
-                    href="/"
-                >Lerchner Manuel</a>
+                        </div>
+                    </a>
 
+                    <a
+                        class="LogoText hide-on-med-and-down rainbow"
+                        href="/"
+                    >Lerchner Manuel</a>
+
+                </div>
             </div>
 
             <ul class="right hide-on-med-and-down navbarText marginRight">
