--- a/views/layouts/error.hbs
+++ b/views/layouts/error.hbs
@@ -42,7 +42,7 @@
             href="/css/style.css"
         />
 
-        <link rel="icon" type="image/png" href="/images/logo.png"/>
+        <link rel="icon" type="image/png" href="/images/logo2.png"/>
 
         <!-- Init Sidenav Animaion--->
         <script>
