--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -8,7 +8,7 @@
 
                 <div class="logo-container">
 
-                    <a href="/" class="brand-logo rainbow">
+                    <a href="https://manuellerchner.de" class="brand-logo rainbow">
 
                         <div class="Logo">
                             <img class="logoImage" src="/images/logo2.png" />
