--- a/views/projects/lambdaCalculus.hbs
+++ b/views/projects/lambdaCalculus.hbs
@@ -2,7 +2,7 @@
 title: "Lambda Calculus",
 description: "In this project I built a parser and interpreter for the λ-calculus in Python. In the end I was able to create some smaller programms in my self-developed programming language",
 image: "/images/lambdaCalculusThumbnail.jpg",
-link: "/projects/lambdaCalculus",
+link: "https://lambdacalculus.manuellerchner.de",
 idx: "1"
 -->
 
