--- a/views/projects/monopoly.hbs
+++ b/views/projects/monopoly.hbs
@@ -2,6 +2,6 @@
 title: "Monopoly-Bank",
 description: "I built an website for a custom made 'Monopoly-Cities' I`ve built with my friends. The website represents the programming part of the project, while my colleagues planned and created the physical game",
 image: "/images/Monopoly.jpg",
-link: "http://manuellerchner.ddns.net:3014/",
+link: "https://monopoly.manuellerchner.de",
 idx: "3"
 !-->
