--- a/views/home.hbs
+++ b/views/home.hbs
@@ -64,7 +64,11 @@
                         </div>
                         <div class="card-action">
                             <a href={{this.link}} class="btn blue">Explore</a>
+                            <p class="date">
+                                {{this.date}}
+                            </p>
                         </div>
+
                     </div>
                 </div>
             {{/each}}
