--- a/views/projects/lambdaCalculus.hbs
+++ b/views/projects/lambdaCalculus.hbs
@@ -3,7 +3,8 @@ title: "Lambda Calculus",
 description: "In this project I built a parser and interpreter for the λ-calculus in Python. In the end I was able to create some smaller programms in my self-developed programming language",
 image: "/images/lambdaCalculusThumbnail.jpg",
 link: "https://lambdacalculus.manuellerchner.de",
-idx: "1"
+idx: "1",
+date: "30. Jul 2021"
 -->
 
 <html lang="en">
