--- a/views/projects/monopoly.hbs
+++ b/views/projects/monopoly.hbs
@@ -3,5 +3,6 @@ title: "Monopoly-Bank",
 description: "I built an website for a custom made 'Monopoly-Cities' I`ve built with my friends. The website represents the programming part of the project, while my colleagues planned and created the physical game",
 image: "/images/Monopoly.jpg",
 link: "https://monopoly.manuellerchner.de",
-idx: "3"
+idx: "3",
+date: "03. Oct 2021"
 !-->
